@@ -1,8 +1,12 @@
 2011-05-14  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/win/wgraph.c (WndGraphProc) [WM_KEYDOWN]: Handle VK_CONTROL key
+	events again. Fixes ctrl-mousedrag rotation of splots.
+
 	* src/mouse.c (event_keypress): MinGW's toupper() masks out high bits
 	required for special keys. Only call for 8bit characters. Fixes
-	shift-mousedrag for wxt and windows terminals.
+	accelerated rotation with keys (e.g. shift-left) for wxt and windows
+	terminals.
 
 	* src/win/wgdiplus.c|h src/win/wgraph.c: Extend support for
 	antialiasing of line segments and point symbols. Add missing
